--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Python
 __pycache__/
+.pytest_cache/
 *.py[cod]
 *.env
 *.venv
@@ -10,6 +11,7 @@ poetry.lock
 .vscode/
 .idea/
 .DS_Store
+.coverage
 # Data and models
 data/
 models/
