--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,23 @@ shap = "^0.48"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
 pre-commit = "^3.2"
-flake8 = "^7.0"
+flake8 = "^7.1"
 black = "^24.10"
 isort = "^5.12"
+
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["src"]
+default_section = "THIRDPARTY"
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = "E203, W503"
 
 [tool.pytest.ini_options]
 addopts = "--maxfail=1 --disable-warnings -q"
